--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Run Danger
         run: bundle exec danger
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
